<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joovictorfirmino.calculadorajoao.CalcJoaoActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="6dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/caljo_valor1"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtValor1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/caljo_valor2"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtValor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="Resultado" />

        <Button
            android:id="@+id/btnSoma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/caljo_soma" />

        <Button
            android:id="@+id/btnSubtrair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caljo_subtrair" />

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caljo_dividir" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caljo_multiplicar" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
